--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div id="logotipo">
         <img src="img/logo.png" alt="Logotipoweb" />
       </div>
-      <h1><a href="index.html">Practica Maquetacion 1</a></h1>
+      <h1><a href="index.html">Maquetacion 1</a></h1>
     </header>
     <!--Fin de la cabesera-->
 
